--- a/client/bower.json
+++ b/client/bower.json
@@ -13,6 +13,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "bootstrap": "~3.3.1",
+    "jquery": "~2.1.1"
   }
 }
