--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "browser-sync": "^1.7.2",
+    "gulp-if": "^1.2.5",
+    "gulp-nodemon": "^1.0.4",
+    "gulp-shell": "^0.2.11"
+  }
 }
